# contracts

./: .gitignore  README.md  deployments-v1.txt  foundry.toml
contracts/: .env.example  AGENTS.md  README.md  foundry.toml
contracts/script/: DeployHackathon.s.sol  DeployPoolReserve.s.sol  DeployPriceIntegrity.s.sol  SeedDemoData.s.sol  UpgradePoolReserve.s.sol
contracts/src/: Errors.sol  Events.sol  LPDistributor.sol  PoolReserve.sol  PoolReserveNative.sol  PoolReserveProxy.sol  PriceIntegrity.sol  Settlement.sol  StrategyManager.sol
contracts/test/: AccessControl.t.sol  LPDistributor.t.sol  NativeBetVault.t.sol  PoolReserve.t.sol  PoolReserveNative.t.sol  PriceIntegrity.t.sol  (+3 more)
cre/: .gitignore  AGENTS.md  README.md  jest.config.js  package-lock.json  package.json  project.yaml  secrets.yaml
scripts/: export_pool_reserve_idl.sh  run_price_integrity_commit.sh
sol-contracts/: Cargo.toml  README.md
sol-contracts/settlement/: Cargo.toml  README.md
sol-contracts/settlement/client/: Cargo.toml
sol-contracts/settlement/client/src/: common.rs
sol-contracts/settlement/src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
specs/: CRE-CONTRACT-FIX-PLAN.md  cre-event-indexing-spec.md  demo-script.md  frontend-pool-reserve-integration.md  jtbd.md  smart-contract-build-checklist.md  smart-contract-vertical-slides.md  spec.md
src/: Roles.sol  StrategyManager.sol
switchboard/: .env  .env.example  README.md  package-lock.json  package.json  tsconfig.json
test/: LPDistributor.t.sol  PoolReserve.t.sol  Settlement.t.sol  StrategyManager.t.sol
(+115 files in other folders)
