[package]
name = "tickx-settlement-sol"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "=0.10.4"
borsh-derive = "=0.10.4"
solana-program = "=2.2.1"
switchboard-on-demand = "=0.11.3"
thiserror = "=1.0.63"

[patch.crates-io]
switchboard-protos = { path = "../price-integrity/vendor/switchboard-protos" }
